@@ -1,3 +1,8 @@
+2003-12-10  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* replace.pl.in: made it to delete in the files all known variables 
+	  that are no longer existing in the XML
+
 2003-12-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* Release 0.30.0
